# PushRecoveryQuadruped

Cheetah_Software_xsens_new/: CMakeLists.txt  commandtorobot
Cheetah_Software_xsens_new/common/: CMakeLists.txt
Cheetah_Software_xsens_new/common/include/: cppTypes.h  saveFiles.h
Cheetah_Software_xsens_new/config/: default-terrain.yaml  mini-cheetah-defaults.yaml
Cheetah_Software_xsens_new/robot/: CMakeLists.txt
Cheetah_Software_xsens_new/scripts/: find_qt_path.sh
Cheetah_Software_xsens_new/sim/: CMakeLists.txt
Cheetah_Software_xsens_new/sim/include/: Simulation.h
Cheetah_Software_xsens_new/sim/src/: DrawList.cpp
Cheetah_Software_xsens_new/user/Example_Leg_InvDyn/: CMakeLists.txt
Cheetah_Software_xsens_new_verify/: config.h.cmake  data_plot.py  testForRecovery.sh
Cheetah_Software_xsens_new_verify/common/: CMakeLists.txt
Cheetah_Software_xsens_new_verify/common/include/: saveFiles.h
Cheetah_Software_xsens_new_verify/config/: default-terrain.yaml  mini-cheetah-defaults.yaml  simVSreal.txt
Cheetah_Software_xsens_new_verify/rc_test/: CMakeLists.txt
Cheetah_Software_xsens_new_verify/robot/include/: HardwareBridge.h  xsensdeviceapi.h
Cheetah_Software_xsens_new_verify/robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp  simVSreal.txt
Cheetah_Software_xsens_new_verify/scripts/: send_to_mini_cheetah.sh
Cheetah_Software_xsens_new_verify/user/JPos_Controller/: CMakeLists.txt
Cheetah_Software_xsens_new_verify/user/MiniCheetahSpi_Controller/: CMakeLists.txt
pushtest_bounding_grid/: config.h.cmake  plot_data.py  testForRecovery.sh
pushtest_bounding_grid/common/include/: cppTypes.h  (+1 more)
pushtest_bounding_grid/config/: cheetah-3-defaults.yaml
pushtest_bounding_grid/results/: bounding6710.mat  bounding6710_BASE_CONTACT.mat  bounding6710_BASE_CONTACT_mpc.mat  bounding6710_F.mat  bounding6710_M.mat  bounding6710_M2.mat  bounding6710_MPC.mat  bounding6786.mat  bounding6786_BASE_CONTACT.mat  bounding6786_BASE_CONTACT_mpc.mat  bounding6786_F.mat  bounding6786_FC.mat  bounding6786_FCC.mat  bounding6862.mat  bounding6862_BASE_CONTACT.mat  bounding6862_BASE_CONTACT_mpc.mat  bounding6862_F.mat  bounding6862_FC.mat  bounding6937.mat  bounding6937_BASE_CONTACT.mat  bounding6937_BASE_CONTACT_mpc.mat  bounding6937_F.mat  bounding6937_FCC.mat  bounding6937_mpc.mat  test.mat
pushtest_bounding_grid/scripts/: run_mc.sh
pushtest_bounding_grid/sim/: CMakeLists.txt
pushtest_bounding_grid/user/MiniCheetahSpi_Controller/: CMakeLists.txt
pushtest_pacing_grid/: plot_data.m  testForRecovery.sh
pushtest_pacing_grid/config/: default-terrain.yaml
pushtest_pacing_grid/rc_test/: CMakeLists.txt
pushtest_pacing_grid/results/: pacing6714_BASE_CONTACT_mpc.mat  pacing6714_MPC.mat  pacing6790.mat  pacing6790_F.mat  pacing6865_BASE_CONTACT_mpc.mat  pacing6865_F.mat  pacing6930_BASE_CONTACT_mpc.mat  pacing6930_F.mat  pacing6930_mpc.mat  test.mat
pushtest_pacing_grid/robot/: CMakeLists.txt
pushtest_pacing_grid/robot/include/: xscommon.h
pushtest_pacing_grid/robot/src/: HardwareBridge.cpp  RobotRunner.cpp
pushtest_pacing_grid/scripts/: config_network_lcm.sh
pushtest_pacing_grid/user/MIT_Controller/: CMakeLists.txt
pushtest_pacing_grid/user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  FootstepOpt.cpp  Gait.cpp
pushtest_pacing_grid/user/MIT_Controller/FSM_States/: ControlFSM.cpp
pushtest_pacing_grid_bak/: CMakeLists.txt  config.h.cmake  data_plot.py  loop.m  plot_data.py  testForRecovery.sh
pushtest_pacing_grid_bak/config/: mini-cheetah-defaults.yaml
pushtest_pacing_grid_bak/documentation/: running_mini_cheetah.md
pushtest_pacing_grid_bak/results/: coverage.txt  pacing6714.mat  pacing6714_BASE_CONTACT.mat  pacing6714_F.mat  pacing6790_BASE_CONTACT.mat  pacing6790_BASE_CONTACT_mpc.mat  pacing6790_mpc.mat  pacing6865.mat  pacing6865_BASE_CONTACT.mat  pacing6865_mpc.mat  pacing6930.mat  pacing6930_BASE_CONTACT.mat  test.mat
pushtest_pacing_grid_bak/sim/: CMakeLists.txt  plot_data.py
pushtest_pacing_grid_bak/user/: CMakeLists.txt
pushtest_trotting_grid/: config.h.cmake  plot_data.py  testForRecovery.sh
pushtest_trotting_grid/common/: CMakeLists.txt
pushtest_trotting_grid/config/: mini-cheetah-defaults.yaml
pushtest_trotting_grid/results/: test.mat  trotting6715.mat  trotting6715_BASE_CONTACT.mat  trotting6715_BASE_CONTACT_mpc.mat  trotting6715_F.mat  trotting6715_MPC.mat  trotting6790.mat  trotting6790_BASE_CONTACT.mat  trotting6790_BASE_CONTACT_mpc.mat  trotting6790_F.mat  trotting6790_mpc.mat  trotting6865.mat  trotting6865_BASE_CONTACT.mat  trotting6865_BASE_CONTACT_mpc.mat  trotting6865_F.mat  trotting6865_mpc.mat  trotting6940.mat  trotting6940_BASE_CONTACT.mat  trotting6940_BASE_CONTACT_mpc.mat  trotting6940_F.mat  trotting6940_mpc.mat
pushtest_trotting_grid/scripts/: send_to_mini_cheetah.sh  setup_network_mc.py
pushtest_trotting_grid/sim/: CMakeLists.txt
(+141 files in other folders)
